modified project modal  --it's more responsive now  --fixed the overflow issue  --reduced the card footer opacity

--- a/src/scss/components/_typography.scss
+++ b/src/scss/components/_typography.scss
@@ -119,10 +119,28 @@
     gap: 10px;
 
     ._project {
-      // height: 250px;
+      transition: opacity 250ms;
+      &:hover {
+        opacity: 0.7;
+      }
+      // height: 400px;
       .img-fluid {
         object-fit: contain;
       }
+    }
+    .card-footer {
+      opacity: 0.9;
+      background-color: inherit;
+
+      p {
+        line-height: 0.91;
+        font-weight: 400;
+
+        @include textLimit(3);
+      }
+    }
+    .card-header {
+      @include textLimit(2);
     }
   }
 }
